--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-<style>
+body {
+  background: rgb(0,0,115);
+  background: linear-gradient(265deg, rgba(0,0,115,1) 0%, rgba(13,13,162,1) 24%, rgba(0,212,255,1) 100%);
+}
 
 * {
-  font-size: 100%;
   font-family: Arial;
+  color: rgb(255, 255, 255);
  }
  
-a 
-{
-	color: black;
-  text-decoration: none;
-  font-family: arial;
-}
 
 
 .navbar {
@@ -52,15 +49,16 @@ a
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background: rgb(0,0,158);
+  background: linear-gradient(267deg, rgba(0,0,158,1) 0%, rgba(68,182,255,1) 100%);
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: owhite;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -68,11 +66,28 @@ a
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: rgb(39, 9, 207);
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-</style>
+/*main page */
+.description {
+  left: 50%;
+  position: absolute;
+  top: 45%;
+  transform: translate(-50%, -55%);
+  text-align: center;
+}
+.description h1 {
+  color: #ffffff;
+}
+.description p {
+  color: white;
+  font-size: 1.3rem;
+  line-height: 1.5;
+}
+
+
