--- a/style.css
+++ b/style.css
@@ -4,11 +4,24 @@ body {
 }
 
 * {
-  font-family: Arial;
   color: rgb(255, 255, 255);
+  font-family: Arial;
  }
  
+ /*navbar */
 
+ .navbar a:hover {
+  background-color: blue;
+}
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+/* */
 
 .navbar {
   overflow: hidden;
@@ -58,7 +71,7 @@ body {
 
 .dropdown-content a {
   float: none;
-  color: owhite;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -72,6 +85,7 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+ 
 
 /*main page */
 .description {
@@ -95,30 +109,9 @@ body {
 a{
   color: #282425!important;	
   }
-  ul.nav.nav-tabs > li{
-    display: inline-block;
-    line-height: 50px;
-    height: 100%;
-    text-transform:uppercase;
-  }
-  ul.nav.nav-tabs > li a{
-    display:block;
-    padding:15px;
-    color: #282425!important;
-    
-  }
-  ul.nav.nav-tabs > li a:hover, ul.nav.nav-tabs > li:hover{
-    background:	#FB282F;
-    color:#fff!important;
-    text-decoration: none!important;
-  }
-  ul.nav.nav-tabs > li a.active{
-    background:	#282425;
-    color:#fff!important;
-    text-decoration: none!important;
-  }
+
   .card-header {
-      background-color: rgb(245,245,245,0.3)!important;
+      background-color: rgba(245, 245, 245, 0)!important;
     border-radius:0!important;
   }
   .card{
@@ -135,28 +128,6 @@ a{
       position: absolute;
       right: 0;
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*.button {
-  font: bold 22px Arial;
-  text-decoration: none;
-  background-color: #eeeeee00;
-  color: #333333;
-  padding: 5px 1000px 5px 10px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-}*/
+.accordion{
+ color: black;
+}
