--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-
+.container-fluid {
+  width: 95% !important;
+  float: left !important;
+}
 body {
   background: rgb(0,0,115);
   background: linear-gradient(265deg, rgba(0,0,115,1) 0%, rgba(13,13,162,1) 24%, rgba(0,212,255,1) 100%);
